# easy-image-qr

./: .gitignore  pyproject.toml  requirements.txt
easy_image_qr/: __main__.py
tests/: test_easy_image_qr.py
